# IoTpwned

./: .gitignore  CHANGELOG.md  PROJECT_PLAN.md  README.md  iotpwned.spec  pyproject.toml
.github/workflows/: build-and-release.yml
docs/: index.html
homeguard/: __init__.py  __main__.py  cli.py  data.py  fingerprint.py  models.py  report.py  risk.py  scanner.py
iotpwned/: __init__.py  __main__.py  cli.py  credcheck.py  cve.py  cve_data.py  cve_online.py  data.py  discovery.py  engine.py  fingerprint.py  models.py  report.py  risk.py  scanner.py  wan.py  webui.py  wifi.py
packaging/: README.md  build.py  iotpwned_launcher.py
tests/: test_credcheck.py  test_cve.py  test_cve_online.py  test_discovery.py  test_fingerprint.py  test_multisubnet.py  test_packaging.py  test_report.py  test_risk.py  test_scanner.py  test_wan.py  test_webui.py  test_wifi.py
