[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "iotpwned"
version = "0.7.0"
description = "Privacy-first home network IoT security scanner — Have I Been Pwned, but for your router and smart devices."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "IoTpwned" }]
keywords = ["security", "iot", "network", "scanner", "home", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]

# The MVP runs entirely on the Python standard library so it works offline with
# zero third-party install. `mac-vendor-lookup` is optional and only enriches
# vendor labels; IoTpwned ships a small built-in OUI table as a fallback.
dependencies = []

[project.optional-dependencies]
vendor = ["mac-vendor-lookup>=0.1.12"]
dev = ["pytest>=7"]
build = ["pyinstaller>=6"]

[project.scripts]
iotpwned = "iotpwned.cli:main"

[project.urls]
Homepage = "https://example.com/iotpwned"

[tool.setuptools.packages.find]
include = ["iotpwned*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
